2007-09-25  Andreas Kupries  <andreask@activestate.com>

	* mpformats/fmt.nroff: Fixed argument swap in fmt_arg_def, fixing
	  [SF Tcllib Bug 1800420].
	
	* mpformats/fmt.html: Handled [SF Tcllib Bug 1800408] and [SF
	  Tcllib Bug 411], removing superfluous whitespace around link
	  text and adding more class names to semantic markup.

2007-09-20  Andreas Kupries  <andreask@activestate.com>

	* mpformats/fmt.html: Added closing of paragraphs per the request
	  in [SF Tcllib Bug 1798427]. Tis more complicated. Paragraphs
	  inside of list elements are not yet closed.

	* mpformats/fmt.html: Reworking handling of list items a bit to
	  properly close the dt, dd, and li tags. Requested by [SF Tcllib
	  Bug 1798427].

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-20  Andreas Kupries  <andreask@activestate.com>

	* doctools.tcl: Bumped versions to 1.3 and 0.3 respectively to
	* docidx.tcl:   reflect the extended syntax and bugfixes listed
	* doctoc.tcl:   below.
	* doctools.man:
	* docidx.man:
	* doctoc.man:
	* pkgIndex.tcl:

2007-08-02  Andreas Kupries  <andreask@activestate.com>

	* mpformats/fmt.latex: Further reworking of the backend internals
	  for proper quoting of TeX special characters, prevention of
	  double-quoting, and markup of wanted special characters. Further
	  removed the use of 'quote' environments. Not needed for the
	  formatting and its use restricts the nesting of lists to three
	  levels. Without we can nest seven levels. Final fixes for
	  [Tcllib SF Bug 1766381].

	* mpformats/fmt.text: Fixed handling of 'cmd_def'.
	* mpformats/fmt.tmml: Fixed handling of nested lists.
	* mpformats/fmt.latex: Fixed handling of list_end, was not updated
	  to the new list type codes.
	* mpformats/fmt.latex: Fixed handling of ^ character. Has to be
	  escaped in regular text. Fixed handling of keywords and