@@ -1,10 +1,10 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin doctools n 1.3]
+[manpage_begin doctools n 1.3.1]
 [copyright {2003-2007 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   {Documentation tools}]
 [titledesc {doctools - Processing documents}]
 [require Tcl 8.2]
-[require doctools [opt 1.3]]
+[require doctools [opt 1.3.1]]
 [description]
 
 This package provides a class for the creation of objects able to
