@@ -7,7 +7,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
-# RCS: @(#) $Id: doctools.tcl,v 1.22 2007/08/20 20:11:59 andreas_kupries Exp $
+# RCS: @(#) $Id: doctools.tcl,v 1.23 2007/09/25 23:11:11 andreas_kupries Exp $
 
 package require Tcl 8.2
 package require textutil::expander
@@ -471,7 +471,7 @@ proc ::doctools::_format {name text} {
 	    catch {$format_ip eval fmt_shutdown}
 	    return -code error "Could not initialize pass $n of engine"
 	}
-	$chk_ip eval ck_initialize
+	$chk_ip eval ck_initialize $p
 
 	if {[catch {set result [$expander expand $text]} msg]} {
 	    catch {$format_ip eval fmt_shutdown}
@@ -1191,4 +1191,4 @@ namespace eval ::doctools {
     catch {search [file join $here                             mpformats]}
 }
 
-package provide doctools 1.3
+package provide doctools 1.3.1
